# code-workspace-ubuntu-installer

./: AGENTS.md  README.md  install.sh  pyproject.toml
installer/: cli.py
installer/steps/: install_node.py  install_python.py
installer/utils/: state.py
tests/: test_cli.py  test_smoke.py  test_state.py
