[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-workspace-ubuntu-installer"
version = "0.1.0"
description = "CLI installer for dev tools on Ubuntu"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
code-workspace-ubuntu-installer = "installer.cli:main"
